--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -7,9 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.5" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.3" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.3" />
     </ItemGroup>
 
     <ItemGroup>
